dart js interop functionality implemented for encrypting text

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,13 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+  <!-- Add the required JS libraries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/md5.min.js" integrity="sha512-ENWhXy+lET8kWcArT6ijA6HpVEALRmvzYBayGL6oFWl96exmq8Fjgxe2K6TAblHLP75Sa/a1YjHpIZRt+9hGOQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Register the js file where the logic is written -->
+  <script src="CryptoEnc.js" type="application/javascript"></script>
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
